--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,84 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-biopython=1.79=py310he24745e_1
-bzip2=1.0.8=h0d85af4_4
-ca-certificates=2021.10.8=h033912b_0
-dbus=1.13.6=ha13b53f_2
-ete3=3.1.2=pypi_0
-expat=2.4.1=he49afe7_0
-gettext=0.19.8.1=hd1a6beb_1008
-glib=2.70.0=hcf210ce_1
-glib-tools=2.70.0=hcf210ce_1
-icu=68.2=he49afe7_0
-jpeg=9d=hbcb3906_0
-krb5=1.19.2=hcfbf3a7_3
-libblas=3.9.0=12_osx64_openblas
-libcblas=3.9.0=12_osx64_openblas
-libclang=11.1.0=default_he082bbe_1
-libcxx=12.0.1=habf9029_0
-libedit=3.1.20191231=h0678c8f_2
-libffi=3.4.2=h0d85af4_5
-libgfortran=5.0.0=9_3_0_h6c81a4c_23
-libgfortran5=9.3.0=h6c81a4c_23
-libglib=2.70.0=hf1fb8c0_1
-libiconv=1.16=haf1e3a3_0
-liblapack=3.9.0=12_osx64_openblas
-libllvm11=11.1.0=hd011deb_2
-libopenblas=0.3.18=openmp_h3351f45_0
-libpng=1.6.37=h7cec526_2
-libpq=13.3=hea3049e_3
-libxcb=1.13=h0d85af4_1004
-libxml2=2.9.12=h93ec3fd_0
-libxslt=1.1.33=h5739fc3_2
-libzlib=1.2.11=h9173be1_1013
-llvm-openmp=12.0.1=hda6cdc1_1
-lxml=4.6.4=py310ha9f0948_0
-lz4-c=1.9.3=he49afe7_1
-mpi=1.0=mpich
-mpi4py=3.1.2=py310hd348148_0
-mpich=3.4.2=hd33e60e_100
-mysql-common=8.0.27=h694c41f_1
-mysql-libs=8.0.27=h115446f_1
-ncurses=6.2=h2e338ed_4
-nspr=4.32=hcd9eead_1
-nss=3.72=h31e2bf1_0
-numpy=1.21.4=py310hd5a656b_0
-openssl=1.1.1l=h0d85af4_0
-pcre=8.45=he49afe7_0
-pip=21.3.1=pypi_0
-pthread-stubs=0.4=hc929b4f_1001
-pyqt=5.12.3=py310h2ec42d9_8
-pyqt-impl=5.12.3=py310hea9ccf3_8
-pyqt5-sip=4.19.18=py310hd046c34_8
-pyqtchart=5.12=py310hea9ccf3_8
-pyqtwebengine=5.12.1=py310hea9ccf3_8
-python=3.10.0=h1248fe1_2_cpython
-python_abi=3.10=2_cp310
-qt=5.12.9=h126340a_4
-readline=8.1=h05e3726_0
-scipy=1.7.2=py310h47774c9_0
-setuptools=59.1.1=py310h2ec42d9_0
-six=1.16.0=pypi_0
-sqlite=3.36.0=h23a322b_2
-tk=8.6.11=h5dbffcc_1
-tzdata=2021e=he74cb21_0
-wheel=0.37.0=pypi_0
-xorg-kbproto=1.0.7=h35c211d_1002
-xorg-libice=1.0.10=h0d85af4_0
-xorg-libsm=1.2.3=h0d85af4_1000
-xorg-libx11=1.7.2=h0d85af4_0
-xorg-libxau=1.0.9=h35c211d_0
-xorg-libxdmcp=1.1.3=h35c211d_0
-xorg-libxext=1.3.4=h0d85af4_1
-xorg-libxrender=0.9.10=h0d85af4_1003
-xorg-renderproto=0.11.1=h0d85af4_1002
-xorg-xextproto=7.3.0=h35c211d_1002
-xorg-xproto=7.0.31=h35c211d_1007
-xz=5.2.5=haf1e3a3_1
-zlib=1.2.11=h9173be1_1013
-zstd=1.5.0=h582d3a0_0
+name: mpi
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+  - biopython=1.79=py310he24745e_1
+  - bzip2=1.0.8=h0d85af4_4
+  - ca-certificates=2021.10.8=h033912b_0
+  - dbus=1.13.6=ha13b53f_2
+  - expat=2.4.1=he49afe7_0
+  - gettext=0.19.8.1=hd1a6beb_1008
+  - glib=2.70.0=hcf210ce_1
+  - glib-tools=2.70.0=hcf210ce_1
+  - icu=68.2=he49afe7_0
+  - jpeg=9d=hbcb3906_0
+  - krb5=1.19.2=hcfbf3a7_3
+  - libblas=3.9.0=12_osx64_openblas
+  - libcblas=3.9.0=12_osx64_openblas
+  - libclang=11.1.0=default_he082bbe_1
+  - libcxx=12.0.1=habf9029_0
+  - libedit=3.1.20191231=h0678c8f_2
+  - libffi=3.4.2=h0d85af4_5
+  - libgfortran=5.0.0=9_3_0_h6c81a4c_23
+  - libgfortran5=9.3.0=h6c81a4c_23
+  - libglib=2.70.0=hf1fb8c0_1
+  - libiconv=1.16=haf1e3a3_0
+  - liblapack=3.9.0=12_osx64_openblas
+  - libllvm11=11.1.0=hd011deb_2
+  - libopenblas=0.3.18=openmp_h3351f45_0
+  - libpng=1.6.37=h7cec526_2
+  - libpq=13.3=hea3049e_3
+  - libxcb=1.13=h0d85af4_1004
+  - libxml2=2.9.12=h93ec3fd_0
+  - libxslt=1.1.33=h5739fc3_2
+  - libzlib=1.2.11=h9173be1_1013
+  - llvm-openmp=12.0.1=hda6cdc1_1
+  - lxml=4.6.4=py310ha9f0948_0
+  - lz4-c=1.9.3=he49afe7_1
+  - mpi=1.0=mpich
+  - mpi4py=3.1.2=py310hd348148_0
+  - mpich=3.4.2=hd33e60e_100
+  - mysql-common=8.0.27=h694c41f_1
+  - mysql-libs=8.0.27=h115446f_1
+  - ncurses=6.2=h2e338ed_4
+  - nspr=4.32=hcd9eead_1
+  - nss=3.72=h31e2bf1_0
+  - numpy=1.21.4=py310hd5a656b_0
+  - openssl=1.1.1l=h0d85af4_0
+  - pcre=8.45=he49afe7_0
+  - pthread-stubs=0.4=hc929b4f_1001
+  - pyqt=5.12.3=py310h2ec42d9_8
+  - pyqt-impl=5.12.3=py310hea9ccf3_8
+  - pyqt5-sip=4.19.18=py310hd046c34_8
+  - pyqtchart=5.12=py310hea9ccf3_8
+  - pyqtwebengine=5.12.1=py310hea9ccf3_8
+  - python=3.10.0=h1248fe1_2_cpython
+  - python_abi=3.10=2_cp310
+  - qt=5.12.9=h126340a_4
+  - readline=8.1=h05e3726_0
+  - scipy=1.7.2=py310h47774c9_0
+  - setuptools=59.1.1=py310h2ec42d9_0
+  - sqlite=3.36.0=h23a322b_2
+  - tk=8.6.11=h5dbffcc_1
+  - tzdata=2021e=he74cb21_0
+  - xorg-kbproto=1.0.7=h35c211d_1002
+  - xorg-libice=1.0.10=h0d85af4_0
+  - xorg-libsm=1.2.3=h0d85af4_1000
+  - xorg-libx11=1.7.2=h0d85af4_0
+  - xorg-libxau=1.0.9=h35c211d_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
+  - xorg-libxext=1.3.4=h0d85af4_1
+  - xorg-libxrender=0.9.10=h0d85af4_1003
+  - xorg-renderproto=0.11.1=h0d85af4_1002
+  - xorg-xextproto=7.3.0=h35c211d_1002
+  - xorg-xproto=7.0.31=h35c211d_1007
+  - xz=5.2.5=haf1e3a3_1
+  - zlib=1.2.11=h9173be1_1013
+  - zstd=1.5.0=h582d3a0_0
+  - pip:
+    - ete3==3.1.2
+    - pip==21.3.1
+    - six==1.16.0
+    - wheel==0.37.0
+prefix: /opt/miniconda3/envs/mpi
